General css fixes for the readfeed and profile pages on ie11

--- a/src/client/styles/books.scss
+++ b/src/client/styles/books.scss
@@ -56,6 +56,8 @@
 }
 
 .rating {
-  display: block;
   margin-top: 5px;
+  span{
+    display: inline !important;
+  }
 }
